--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.4",
+        "@relume_io/relume-tailwind": "^0.2.0",
+        "@relume_io/relume-ui": "^0.2.2",
         "flowbite": "^2.3.0",
         "preline": "^2.3.0"
     }
